# cxx-example

./: Cargo.toml  README.md  build.rs  x86_64-lemolaos-eabi.json
.cargo/: config.toml
cpp/: test.cpp
cpp/include/: test.hpp
src/: main.rs
