[package]
name = "cxx-example"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = { version = "1.0.94", default-features = false, features = ["alloc"] }
libc_alloc = "1.0.4"

[build-dependencies]
cxx-build = "1.0.94"
